AC_INIT([nfdnsbl], [0.1_alpha], [simon.le-lann@dosadi.fr], [nfdnsbl], [http://nfdnsbl.dosadi.fr/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 no-define])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AC_HEADER_STDC
AC_CONFIG_FILES([Makefile])
AC_DEFINE_UNQUOTED(CONFFILE, "$sysconfdir/nfdnsbl.conf", [Config file path])
AC_OUTPUT
